--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
     <TextView
         android:id="@+id/circle_check_tv"
         android:layout_width="match_parent"
@@ -60,7 +60,7 @@
         android:layout_marginTop="10dp"
         android:background="#C628E1"
         android:gravity="center"
-        android:text="开门"
+        android:text="读卡"
         android:onClick="openDoor"
         android:textColor="@color/white"
         android:textSize="30dp"
